page-header z-index fix

--- a/assets/scss/components/content/_page-header.scss
+++ b/assets/scss/components/content/_page-header.scss
@@ -21,6 +21,7 @@
 	--page-header-inner-shadow: unset;
 
 	&::before {
+		z-index: 1;
 		display: block;
 		background-color: var(--page-header-overlay);
 		opacity: var(--page-header-overlay-opacity);
@@ -29,22 +30,17 @@
 		@include position(absolute, 0 0 0 0);
 	}
 
-	&::after {
-		position: absolute;
-		top: 0;
-		bottom: -1px;
-		left: 0;
-		width: 100%;
-		height: 10rem;
-		content: "";
+	& .wrap {
+		z-index: 2;
 	}
+
 }
 
 .page-header-image {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: -1;
+	z-index: 0;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
